opam-version: "2.0"
name: "bwd"
synopsis: "Backward lists"
description: """
This OCaml package defines backward lists that are isomorphic to lists. They are useful when one wishes to give a different type to the lists that are semantically in reverse. In our experience, it is easy to miss List.rev or misuse List.rev_append when both semantically forward and backward lists are present. With backward lists having a different type, it is impossible to make these mistakes.
"""
maintainer: "favonia <favonia@gmail.com>"
authors: "The RedPRL Development Team"
license: "Apache-2.0"
homepage: "https://github.com/RedPRL/ocaml-bwd"
bug-reports: "https://github.com/RedPRL/ocaml-bwd/issues"
dev-repo: "git+https://github.com/RedPRL/ocaml-bwd.git"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.08.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
